--- a/reports_by_publisher.html
+++ b/reports_by_publisher.html
@@ -16,7 +16,7 @@
 <body>
     <div id="topbar-container"></div>  
     <aside class="side-bar">
-        <<div class="option"><a href="publishers.html" class="option-link">Publicadores</a></div>
+        <div class="option"><a href="publishers.html" class="option-link">Publicadores</a></div>
         <div class="option"><a href="reports.html" class="option-link">Informes mes anterior</a></div>
         <div class="option"><a href="monthly_reports.html" class="option-link">Totales</a></div>
     </aside>
