Se agregó la página form_by_secretary para que el secretario pueda enviar informes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="card-content custom-text-color center-align">
                     <img src="images/Secretario_logo.png" alt="Secretario Logo" class="logo">
                     <span class="card-title">Bienvenido a Secretario</span>
-                    <p>Seleccione que desea hacer.</p>
+                    <p>Seleccione qué desea hacer.</p>
                 </div>
                 <div class="card-action center-align">
                     <a href="form.html" class="btn custom-btn">Enviar informe</a>
