--- a/monthly_reports.html
+++ b/monthly_reports.html
@@ -17,7 +17,8 @@
     <aside class="side-bar">
         <div class="option"><a href="publishers.html" class="option-link">Publicadores</a></div>
         <div class="option"><a href="reports_by_publisher.html" class="option-link">Informes mes anterior</a></div>
-        <div class="option"><a href="reports_by_publisher.html" class="option-link">Informes por publicador</a></div>        
+        <div class="option"><a href="reports_by_publisher.html" class="option-link">Informes por publicador</a></div>
+        <div class="option"><a href="form_by_Secretary.html" class="option-link">Enviar informe</a></div>        
     </aside>
     <div class="content">
         <div class="container">
