--- a/reports_by_publisher.html
+++ b/reports_by_publisher.html
@@ -18,6 +18,7 @@
     <aside class="side-bar">
         <div class="option"><a href="publishers.html" class="option-link">Publicadores</a></div>
         <div class="option"><a href="reports.html" class="option-link">Informes mes anterior</a></div>
+        <div class="option"><a href="form_by_Secretary.html" class="option-link">Enviar informe</a></div>
         <div class="option"><a href="monthly_reports.html" class="option-link">Totales</a></div>
     </aside>
     <section class="form">        
