--- a/reports.html
+++ b/reports.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="CSS/footer_layout.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Informes de [Mes Anterior] de [Año]</title>
+    <title>Informes de Mes Anterior</title>
 </head>
 <body>
     <div id="topbar-container"></div>  
     <aside class="side-bar">
         <div class="option"><a href="publishers.html" class="option-link">Publicadores</a></div>
         <div class="option"><a href="reports_by_publisher.html" class="option-link">Informes por publicador</a></div>
+        <div class="option"><a href="form_by_Secretary.html" class="option-link">Enviar informe</a></div>
         <div class="option"><a href="monthly_reports.html" class="option-link">Totales</a></div>
     </aside>
     <div class="content">
