Se agregó la columna Palabra Clave a la página de publicadores para la validación al enviar el informe

--- a/publishers.html
+++ b/publishers.html
@@ -50,13 +50,17 @@
                             <label class="form-check-label" for="mujer">Mujer</label>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <label for="notas" class="form-label">Notas</label>
                         <input type="text" class="form-control" id="notas">
                     </div>
                     <div class="col-md-4">
                         <label for="avatar" class="form-label">Avatar</label>
                         <input type="file" class="form-control" id="avatar" accept="image/*">
+                    </div>
+                    <div class="col-md-4">
+                        <label for="clave" class="form-label">Palabra Clave*</label>
+                        <input type="text" class="form-control" id="clave" placeholder="Palabra clave" required>
                     </div>
                 </div>
                 <br>
@@ -79,6 +83,7 @@
                             <th scope="col">Fecha de bautismo</th>
                             <th scope="col">Sexo</th>
                             <th scope="col">Notas</th>
+                            <th scope="col">Palabra clave</th>
                             <th scope="col">Avatar</th>
                             <th scope="col">Acciones</th>
                         </tr>
