--- a/form.html
+++ b/form.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Asistente para el secretario de la congregación">
     <link rel="stylesheet" href="CSS/form_layout.css">
-    <link rel="icon" href="images/Secretario_logo.png"> 
-    <script type="text/javascript" src="javascript/form.js"></script>   
-    <title>Enviar informe</title>    
+    <link rel="icon" href="images/Secretario_logo.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="javascript/form.js"></script>
+    <title>Validar Publicador</title>
 </head>
 <body>
     <section class="form">
@@ -16,29 +18,50 @@
         </a>
         <div class="header">
             <h2>Secretario</h2>
-            <h4>Enviar informe</h4>
+            <h4>Validar Publicador</h4>
         </div>
-        <form id="informeForm">
+        <form id="validateForm">
             <h4>Publicador</h4>
             <select id="publicador" name="publicador" class="field" required>
                 <!-- Opciones serán llenadas dinámicamente con JavaScript -->
             </select>
-            <h4>Año</h4>
-            <select id="anio" name="anio" class="field" required>
-                <!-- Opciones serán llenadas dinámicamente con JavaScript -->
-            </select>
-            <h4>Mes</h4>
-            <select id="mes" name="mes" class="field" required>
-                <!-- Opciones serán llenadas dinámicamente con JavaScript -->
-            </select>
-            <h4>Publicaciones</h4>
-            <input type="number" id="publicaciones" name="publicaciones" class="field">
-            <h4>Videos</h4>
-            <input type="number" id="videos" name="videos" class="field">
-            <h4>Horas</h4>
-            <input type="number" id="horas" name="horas" class="field" required>
-            <button type="button" class="button" id="btnEnviarInforme">Enviar</button>
-        </form>    
+            <h4>Palabra Clave</h4>
+            <input type="text" id="palabraClave" name="palabraClave" class="field" required>
+            <button type="button" class="button" id="btnValidar">Validar</button>
+        </form>
     </section>
+
+    <!-- Modal -->
+    <div class="modal fade" id="formularioModal" tabindex="-1" aria-labelledby="formularioModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="formularioModalLabel">Enviar Informe</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="informeForm">
+                        <h4>Año</h4>
+                        <select id="anio" name="anio" class="field" required>
+                            <!-- Opciones serán llenadas dinámicamente con JavaScript -->
+                        </select>
+                        <h4>Mes</h4>
+                        <select id="mes" name="mes" class="field" required>
+                            <!-- Opciones serán llenadas dinámicamente con JavaScript -->
+                        </select>
+                        <h4>Publicaciones</h4>
+                        <input type="number" id="publicaciones" name="publicaciones" class="field">
+                        <h4>Horas</h4>
+                        <input type="number" id="horas" name="horas" class="field" required>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary" id="btnEnviarInforme">Enviar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
